# rust-kubernetes

./: .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml  docker_build.sh  kustomization.yaml
config/kubernetes/: deployment.yaml  service.yaml
scripts/: build.sh  deploy.sh
src/: main.rs
