[package]
name = "rust-kube"
version = "0.1.0"
authors = ["andra <andra.satria1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
actix-web = "3"